--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 
-JSONRPC Tester.xcodeproj/project.xcworkspace/xcshareddata/JSONRPC Tester.xccheckout
+*.xccheckout
+*.xcuserstate
+*.xcscheme
+*.plist
 
-JSONRPC Tester.xcodeproj/project.xcworkspace/xcuserdata/yotamlaufer.xcuserdatad/UserInterfaceState.xcuserstate
-
-JSONRPC Tester.xcodeproj/xcuserdata/yotamlaufer.xcuserdatad/xcschemes/JSONRPC Tester.xcscheme
-
-JSONRPC Tester.xcodeproj/xcuserdata/yotamlaufer.xcuserdatad/xcschemes/xcschememanagement.plist
+.DS_Store
